# monad-effects

./: .gitignore  .hlint.yaml  .yamllint.yaml  Makefile  README.md  cabal.project  cabal.project.legacy  flake.nix  hie.yaml  monad-effects.cabal  notes.txt  stack.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml
app/: Main.hs
bench/fs-unix/: CHANGELOG.md  fs-unix.cabal
bench/fs-unix/bench/: Main.hs  baseline_9.8.2.csv  baseline_ubuntu-latest_9.10.1_ci.csv  baseline_ubuntu-latest_9.2.8_ci.csv  baseline_ubuntu-latest_9.4.8_ci.csv  baseline_ubuntu-latest_9.6.7_ci.csv  baseline_ubuntu-latest_9.8.4_ci.csv
docs/: index.html
effects-async/: effects-async.cabal
effects-async/src/Effects/Concurrent/: Async.hs
effects-env/: effects-env.cabal
effects-fs/: effects-fs.cabal
effects-fs/src/Effects/FileSystem/: FileReader.hs  FileWriter.hs  HandleReader.hs  HandleWriter.hs  Internal.hs  Path.hs  PathReader.hs  PathWriter.hs  Utils.hs
effects-fs/test/unit/: Main.hs  Misc.hs  PathReader.hs  PathWriter.hs  Utils.hs
effects-ioref/: effects-ioref.cabal
effects-logger-ns/: effects-logger-ns.cabal
effects-logger-ns/src/Effects/: LoggerNS.hs
effects-logger-ns/test/unit/: Main.hs  format-locstable.golden  format-newline.golden  format-timezone.golden
effects-typed-process/: effects-typed-process.cabal
effects-typed-process/src/Effects/System/: Process.hs
effects-typed-process/src/Process/: Typed.hs
effects-unix-compat/: effects-unix-compat.cabal
effects-unix-compat/src/Effects/System/: PosixCompat.hs
lib/effects-async/: CHANGELOG.md  effects-async.cabal
lib/effects-async/src/Effects/Concurrent/: Async.hs
lib/effects-env/: CHANGELOG.md  effects-env.cabal
lib/effects-env/src/Effects/System/: Environment.hs
lib/effects-exceptions/: effects-exceptions.cabal
lib/effects-exceptions/src/Effects/: Exception.hs
lib/effects-exceptions/test/unit/: Main.hs  TestUtils.hs
lib/effects-exceptions/test/unit/Annotation/: Utils.hs
lib/effects-fs/: effects-fs.cabal
lib/effects-fs-utils/: CHANGELOG.md  effects-fs-utils.cabal
lib/effects-fs-utils/src/Effects/FileSystem/: IO.hs  OsPath.hs  PathType.hs  UTF8.hs
lib/effects-fs-utils/test/unit/: Main.hs
lib/effects-fs/bench/: Main.hs  baseline_9.6.3.csv  bench.csv  bench_ubuntu-latest_8.10_ci.csv  bench_ubuntu-latest_9.0_ci.csv  bench_ubuntu-latest_9.2_ci.csv  bench_ubuntu-latest_9.4_ci.csv  bench_ubuntu-latest_9.6_ci.csv
lib/effects-fs/src/Effects/FileSystem/: FileReader.hs  FileWriter.hs  Handle.hs  HandleRW.hs  HandleReader.hs  HandleWriter.hs  PathReader.hs  PathWriter.hs  Utils.hs
lib/effects-fs/test/unit/: Main.hs  Misc.hs  PathReader.hs  PathWriter.hs  TestUtils.hs  Utils.hs
lib/effects-fs/test/unit/PathWriter/: CopyDir.hs  Symlink.hs
lib/effects-haskeline/: LICENSE  effects-haskeline.cabal
lib/effects-haskeline/src/Effects/: Haskeline.hs
lib/effects-http-client/: CHANGELOG.md  effects-http-client.cabal
lib/effects-http-client/src/Effects/HTTP/: Client.hs
lib/effects-logger/: effects-logger.cabal
lib/effects-logger-ns/: CHANGELOG.md  effects-logger-ns.cabal
lib/effects-logger-ns/src/Effects/: LoggerNS.hs
lib/effects-logger-ns/test/unit/: Main.hs
lib/effects-logger/src/Effects/: Logger.hs
lib/effects-logger/src/Effects/Logger/: Namespace.hs  Utils.hs
lib/effects-logger/test/unit/: Main.hs
lib/effects-logger/test/unit/Unit/: Prelude.hs
lib/effects-notify/: LICENSE  effects-notify.cabal
lib/effects-notify/src/Effects/: Notify.hs
lib/effects-notify/test/unit/: Main.hs
lib/effects-optparse/: effects-optparse.cabal
lib/effects-optparse/src/Effects/: Optparse.hs
lib/effects-terminal/: effects-terminal.cabal
monad-callstack/: CHANGELOG.md  cabal.project  hie.yaml  monad-callstack.cabal
monad-callstack/src/Effects/: MonadCallStack.hs
monad-callstack/test/unit/: Main.hs  add-callstack.golden  get-callstack.golden  no-callstack.golden  throw-callstack.golden
monad-exceptions/: CHANGELOG.md  monad-exceptions.cabal
monad-exceptions/src/Effects/: Exception.hs
monad-exceptions/test/unit/: Main.hs  add-callstack-merges.golden  add-callstack.golden  calls-exitFailure.golden  catches-callstack-any.golden  catches-callstack-wrapped.golden  fromException-direct.golden  fromException-wrapped-nested.golden  throw-callstack.golden  toException.golden
monad-fs/: CHANGELOG.md  monad-fs.cabal
monad-fs-reader/: CHANGELOG.md  cabal.project  hie.yaml  monad-fs-reader.cabal
monad-fs-reader/src/Effects/: MonadFsReader.hs
monad-fs/src/Effects/: MonadFs.hs  MonadFsReader.hs  MonadFsWriter.hs
monad-fs/src/Effects/FileSystem/: FileReader.hs  FileWriter.hs  HandleReader.hs  HandleWriter.hs  Internal.hs  MonadFileReader.hs  MonadFileWriter.hs  MonadHandleReader.hs  MonadHandleWriter.hs  MonadPathReader.hs  MonadPathWriter.hs  Path.hs  PathReader.hs  PathWriter.hs  Types.hs
monad-fs/test/unit/: Main.hs  PathReader.hs  PathWriter.hs
monad-fs/test/unit/PathReader/: listDirectoryRecursive.golden
monad-logger-namespace/: CHANGELOG.md  cabal.project  hie.yaml  monad-logger-namespace.cabal
monad-logger-namespace/src/Effects/: LoggerNamespace.hs  MonadLoggerNamespace.hs
monad-logger-namespace/test/unit/: Main.hs  format-basic.golden  format-locpartial.golden
monad-system-time/: CHANGELOG.md  monad-system-time.cabal
monad-system-time/src/Effects/: MonadTime.hs  Time.hs
monad-system-time/test/unit/: Main.hs  localtime-parse-callstack.golden  timespec-create-nanoseconds.golden  zonedtime-parse-callstack.golden
monad-terminal/: CHANGELOG.md  cabal.project  hie.yaml  monad-terminal.cabal
monad-terminal/src/Effects/: MonadTerminal.hs
monad-terminal/src/Effects/System/: MonadTerminal.hs  Terminal.hs
monad-thread/: CHANGELOG.md  cabal.project  hie.yaml  monad-thread.cabal
monad-thread/src/Effects/: MonadThread.hs
monad-thread/src/Effects/Concurrent/: MonadThread.hs  Thread.hs
monad-typed-process/: CHANGELOG.md  monad-typed-process.cabal
monad-typed-process/src/Effects/: MonadProcess.hs
monad-typed-process/src/Effects/System/: MonadProcess.hs  Process.hs
(+455 files in other folders)
