cabal-version:      2.4
name:               effects-fs
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.4
copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           FileSystem effects
description:        FileSystem effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:           common
  exposed-modules:
    Effects.FileSystem.FileReader
    Effects.FileSystem.FileWriter
    Effects.FileSystem.HandleReader
    Effects.FileSystem.HandleWriter
    Effects.FileSystem.Internal
    Effects.FileSystem.Path
    Effects.FileSystem.PathReader
    Effects.FileSystem.PathWriter

  build-depends:
    , base                >=4.14.0.0  && <4.18
    , bytestring          >=0.10.12.0 && <0.12
    , deepseq             ^>=1.4.4.0
    , directory           ^>=1.3.5.0
    , effects-exceptions  ^>=0.1
    , effects-ioref       ^>=0.1
    , filepath            >=1.4.2.1   && <1.5
    , optics-core         ^>=0.4
    , text                >=1.2.4.0   && <2.1
    , time                >=1.9.3     && <1.14
    , transformers        >=0.5.6.2   && <0.7

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    PathReader
    PathWriter

  build-depends:
    , base
    , bytestring
    , effects-exceptions
    , effects-fs
    , effects-ioref
    , env-guard           ^>=0.2
    , tasty               >=1.1.0.3 && <1.5
    , tasty-hunit         >=0.9     && <0.11
    , transformers

  hs-source-dirs:   test/unit
  default-language: Haskell2010
