cabal-version:      2.4
name:               effects-fs
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.4 || ==9.6.1

copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           FileSystem effects
description:        FileSystem effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

-- Ideally os_path would be false by default for GHC < 9.6, but
-- unfortunately we cannot use conditionals in default. The default True
-- will break GHC < 9.6, but this way is more future-proof.
--
-- See https://github.com/haskell/cabal/issues/5328

flag os_path
  description:
    Uses the Abstract File Path's OsPath rather than legacy FilePath.

  default:     True
  manual:      True

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  if os(windows)
    cpp-options: -DWINDOWS

  if flag(os_path)
    cpp-options: -DUSE_OS_PATH

library
  import:           common-lang
  exposed-modules:
    Effects.FileSystem.FileReader
    Effects.FileSystem.FileWriter
    Effects.FileSystem.HandleReader
    Effects.FileSystem.HandleWriter
    Effects.FileSystem.Internal
    Effects.FileSystem.Path
    Effects.FileSystem.PathReader
    Effects.FileSystem.PathWriter

  build-depends:
    , base                >=4.14.0.0  && <4.19
    , bytestring          >=0.10.12.0 && <0.12
    , deepseq             ^>=1.4.4.0
    , directory           ^>=1.3.5.0
    , effects-exceptions  ^>=0.1
    , effects-ioref       ^>=0.1
    , filepath            >=1.4.2.1   && <1.5
    , optics-core         ^>=0.4
    , text                >=1.2.4.0   && <2.1
    , time                >=1.9.3     && <1.14
    , transformers        >=0.5.6.2   && <0.7

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    PathReader
    PathWriter
    Utils

  build-depends:
    , base
    , bytestring
    , effects-exceptions
    , effects-fs
    , effects-ioref
    , env-guard           ^>=0.2
    , tasty               >=1.1.0.3 && <1.5
    , tasty-hunit         >=0.9     && <0.11
    , transformers

  if flag(os_path)
    build-depends: filepath

  hs-source-dirs:   test/unit
  default-language: Haskell2010
