cabal-version:      2.4
name:               effects-logger-ns
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.4
copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           Adds namespaces to monad-logger
description:        Adds namespaces to monad-logger
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:  Effects.LoggerNS
  build-depends:
    , base              >=4.14.0.0  && <4.18
    , bytestring        >=0.10.12.0 && <0.12
    , containers        ^>=0.6.3.1
    , deepseq           ^>=1.4.4.0
    , effects-time      ^>=0.1
    , fast-logger       >=2.1       && <3.3
    , monad-logger      ^>=0.3.30
    , optics-core       ^>=0.4
    , template-haskell  >=2.16.0.0  && <2.20
    , text              >=1.2.4.0   && <2.1

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , effects-logger-ns
    , effects-time
    , monad-logger
    , tasty              >=1.1.0.3 && <1.5
    , tasty-hunit        >=0.9     && <0.11
    , text
    , time               >=1.9.3   && <1.14

  hs-source-dirs:   test/unit
  default-language: Haskell2010
