cabal-version:      2.4
name:               monad-system-time
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           Time effects
description:        Time effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:  Effects.MonadTime
  build-depends:
    , algebra-simple   ^>=0.1
    , base             >=4.14.0.0 && <4.18
    , bounds           ^>=0.1
    , deepseq          ^>=1.4.4.0
    , monad-callstack  ^>=0.1
    , optics-th        ^>=0.4
    , time             >=1.9.3    && <1.14
    , transformers     >=0.5.6.2  && <0.7

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , filepath           ^>=1.4.2.1
    , hedgehog           >=1.0.2    && <1.3
    , monad-callstack
    , monad-system-time
    , optics-core        ^>=0.4
    , tasty              >=1.1.0.3  && <1.5
    , tasty-golden       ^>=2.3.1.1
    , tasty-hedgehog     >=1.2.0.0  && <1.5
    , tasty-hunit        >=0.9      && <0.11
    , time

  hs-source-dirs:   test/unit
  default-language: Haskell2010
